@@ -22,6 +22,10 @@ jmx
 * Now using MX4J instead of Sun's reference implementation. Patch by Michael Kloss
 * Added RMI adapter. Patch by Michael Beauregard
 
+Main
+----------------------
+* Display command-line options if "-?" is passed as an argument.
+
 ModificationSet
 ----------------------
 * Fixed bogus "A modification was detected in the future" message
